--- a/Petini_Capston_Mini/src/app/shop-owner/dashboard/dashboard.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
               <div class="col-sm-7">
                 <div class="numbers">
                   <p>Số lượng khách hàng </p>
-                  100000
+                  {{value.customers}}
                 </div>
               </div>
             </div>
@@ -34,7 +34,7 @@
               <div class="col-sm-7">
                 <div class="numbers">
                   <p>Đơn hàng thành công</p>
-                  200000
+                  {{value.successOrders}}
                 </div>
               </div>
             </div>
@@ -55,7 +55,7 @@
               <div class="col-sm-7">
                 <div class="numbers">
                   <p>Đặt lịch thành công</p>
-                  300000
+                  {{value.successBookings}}
                 </div>
               </div>
             </div>
@@ -76,7 +76,8 @@
               <div class="col-sm-7">
                 <div class="numbers">
                   <p>Thú cưng đã nhận nuôi</p>
-                  4000000
+                  {{value.successAdoptedPet
+                  }}
                 </div>
               </div>
             </div>
