--- a/Petini_Capston_Mini/src/app/shop-owner/shop-owner.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/shop-owner.component.html
@@ -27,7 +27,7 @@
                   <!--  -->
                   <mat-list-item class="sidenav-nav-link w-100 p-0" [style.text-align]="!isExpanded ? 'center' : 'unset'"
                     routerLink="Dashboard" routerLinkActive="active">
-                    <mat-icon class="sidenav-link-icon text-dark" matListItemIcon [style.margin]="!isExpanded ? '0!important' : ''" [style.width]="!isExpanded ? '100%' : ''">groups</mat-icon>
+                    <mat-icon class="sidenav-link-icon text-dark" matListItemIcon [style.margin]="!isExpanded ? '0!important' : ''" [style.width]="!isExpanded ? '100%' : ''">dashboard</mat-icon>
                     <span class="sidenav-link-text w-100" *ngIf="isExpanded" matListItemTitle>Bảng thông tin</span>
                   </mat-list-item>
                   <!-- items -->
